优化构建配置与 CI 发布流程
- **混淆规则配置**：重写 `proguard-rules.pro`，添加 Android 组件保持规则，排除 `androidx.window` 警告，并保留核心业务包 `vip.mystery0.pixel.meter`。
- **CI 流程升级**：更新 GitHub Actions workflow，升级 bundletool 至 1.18.3，新增 Universal APK 生成与签名逻辑，实现 AAB 与 APK 双重发布。
- **构建脚本调整**：启用 Release 模式下的代码混淆 (`isMinifyEnabled`) 与资源压缩 (`isShrinkResources`)，修正签名配置引用。
- **权限清理**：移除 `AndroidManifest.xml` 中冗余的 `PACKAGE_USAGE_STATS` 权限声明。

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,20 +33,49 @@ jobs:
           SIGN_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
           ./gradlew bundleRelease
-      - name: Install jq
-        run: sudo apt-get install wget -y
-      - name: Parse build files
+      - name: Install dependencies
+        run: sudo apt-get install wget unzip -y
+      - name: Process Artifacts
         id: apk
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          wget -q -O /tmp/bundletool.jar https://github.com/google/bundletool/releases/download/1.18.2/bundletool-all-1.18.2.jar
-          fileName=$(ls ${{ env.OUTPUT_DIR }}/ | head -n 1)
-          versionName=$(java -jar /tmp/bundletool.jar dump manifest --bundle ${{ env.OUTPUT_DIR }}/$fileName --xpath /manifest/@android:versionName)
+          # Download bundletool
+          wget -q -O /tmp/bundletool.jar https://github.com/google/bundletool/releases/download/1.18.3/bundletool-all-1.18.3.jar
+          
+          # Define paths
+          BUNDLE_DIR="app/build/outputs/bundle/release"
+          AAB_FILE=$(ls $BUNDLE_DIR/*.aab | head -n 1)
+          AAB_FILENAME=$(basename $AAB_FILE)
+          
+          # Extract version info
+          versionName=$(java -jar /tmp/bundletool.jar dump manifest --bundle $AAB_FILE --xpath /manifest/@android:versionName)
+          echo "Version Name: $versionName"
+          
+          # Generate Universal APK
+          echo "Generating Universal APK..."
+          java -jar /tmp/bundletool.jar build-apks \
+            --bundle=$AAB_FILE \
+            --output=universal.apks \
+            --mode=universal \
+            --ks=/tmp/key.jks \
+            --ks-pass=pass:$KEYSTORE_PASSWORD \
+            --ks-key-alias=$KEY_ALIAS \
+            --key-pass=pass:$KEY_PASSWORD
+          
+          unzip -p universal.apks universal.apk > PixelMeter-$versionName-universal.apk
+          
+          # Export variables
           echo "versionName=$versionName" >> $GITHUB_ENV
-          echo "fileName=$fileName" >> $GITHUB_ENV
+          echo "aabFile=$AAB_FILE" >> $GITHUB_ENV
+          echo "universalApk=PixelMeter-$versionName-universal.apk" >> $GITHUB_ENV
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.versionName }}
           body_path: CHANGELOG.md
           files: |
-            ${{ env.OUTPUT_DIR }}/${{ env.fileName }}
+            ${{ env.aabFile }}
+            ${{ env.universalApk }}
